[#noissue] Cleanup URLEncoder